--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
+<!-- 
+    @author         Neil-Bryan Caoile
+    @date           2021-08-29
+    @description  
+        A simple pricing page. User can choose three options.
+        User can view the information about those options.
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Price Tiers</title>
+    <title>Data Tiers</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
     <link rel="stylesheet" href="app.css">
 </head>
@@ -14,7 +23,7 @@
 
         <div class="pricing-plan">
             <img src="icons/icon1.png" alt="" class="pricing-img">
-            <h2 class="pricing-header">Personal</h2>
+            <h2 class="pricing-header">Vanilla-Gig Plan</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Custom domains</li>
                 <li class="pricing-features-item">Sleeps after 30 mins of inactivity</li>
@@ -25,7 +34,7 @@
 
         <div class="pricing-plan">
             <img src="icons/icon2.png" alt="" class="pricing-img">
-            <h2 class="pricing-header">Small team</h2>
+            <h2 class="pricing-header">Mediocre-Gig</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Never sleeps</li>
                 <li class="pricing-features-item">Multiple workers for more powerful apps</li>
@@ -36,7 +45,7 @@
 
         <div class="pricing-plan">
             <img src="icons/icon3.png" alt="" class="pricing-img">
-            <h2 class="pricing-header">Enterprise</h2>
+            <h2 class="pricing-header">Big-Gig Plan</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Dedicated</li>
                 <li class="pricing-features-item">Simple horizontal scalability</li>
